amazon-web-services/awscli/2.4.15/ec2/describe-security-groups.txt
DESCRIBE-SECURITY-GROUPS()                          DESCRIBE-SECURITY-GROUPS()



NAME
       describe-security-groups -

DESCRIPTION
       Describes the specified security groups or all of your security groups.

       A security group is for use with instances either  in  the  EC2-Classic
       platform  or  in  a  specific VPC. For more information, see Amazon EC2
       security groups in the Amazon Elastic  Compute  Cloud  User  Guide  and
       Security  groups  for your VPC in the Amazon Virtual Private Cloud User
       Guide .

       See also: AWS API Documentation

       See 'aws help' for descriptions of global parameters.

       describe-security-groups is a paginated operation. Multiple  API  calls
       may  be issued in order to retrieve the entire data set of results. You
       can disable pagination by providing the --no-paginate  argument.   When
       using  --output  text and the --query argument on a paginated response,
       the --query argument must extract data from the results of the  follow-
       ing query expressions: SecurityGroups

SYNOPSIS
            describe-security-groups
          [--filters <value>]
          [--group-ids <value>]
          [--group-names <value>]
          [--dry-run | --no-dry-run]
          [--cli-input-json | --cli-input-yaml]
          [--starting-token <value>]
          [--page-size <value>]
          [--max-items <value>]
          [--generate-cli-skeleton <value>]

OPTIONS
       --filters (list)
          The  filters.  If  using  multiple  filters  for  rules, the results
          include security groups for which any combination  of  rules  -  not
          necessarily a single rule - match all filters.

          o description - The description of the security group.

          o egress.ip-permission.cidr  -  An  IPv4  CIDR block for an outbound
            security group rule.

          o egress.ip-permission.from-port - For an outbound rule,  the  start
            of  port range for the TCP and UDP protocols, or an ICMP type num-
            ber.

          o egress.ip-permission.group-id - The ID of a  security  group  that
            has been referenced in an outbound security group rule.

          o egress.ip-permission.group-name  -  The  name  of a security group
            that is referenced in an outbound security group rule.

          o egress.ip-permission.ipv6-cidr - An IPv6 CIDR block  for  an  out-
            bound security group rule.

          o egress.ip-permission.prefix-list-id  -  The ID of a prefix list to
            which a security group rule allows outbound access.

          o egress.ip-permission.protocol - The IP protocol  for  an  outbound
            security  group  rule (tcp | udp | icmp , a protocol number, or -1
            for all protocols).

          o egress.ip-permission.to-port - For an outbound rule,  the  end  of
            port range for the TCP and UDP protocols, or an ICMP code.

          o egress.ip-permission.user-id  -  The  ID of an Amazon Web Services
            account that has been referenced in  an  outbound  security  group
            rule.

          o group-id - The ID of the security group.

          o group-name - The name of the security group.

          o ip-permission.cidr  -  An  IPv4 CIDR block for an inbound security
            group rule.

          o ip-permission.from-port - For an inbound rule, the start  of  port
            range for the TCP and UDP protocols, or an ICMP type number.

          o ip-permission.group-id  - The ID of a security group that has been
            referenced in an inbound security group rule.

          o ip-permission.group-name - The name of a security  group  that  is
            referenced in an inbound security group rule.

          o ip-permission.ipv6-cidr  - An IPv6 CIDR block for an inbound secu-
            rity group rule.

          o ip-permission.prefix-list-id - The ID of a prefix list from  which
            a security group rule allows inbound access.

          o ip-permission.protocol  -  The IP protocol for an inbound security
            group rule (tcp | udp | icmp , a protocol number, or  -1  for  all
            protocols).

          o ip-permission.to-port - For an inbound rule, the end of port range
            for the TCP and UDP protocols, or an ICMP code.

          o ip-permission.user-id - The ID of an Amazon Web  Services  account
            that has been referenced in an inbound security group rule.

          o owner-id  - The Amazon Web Services account ID of the owner of the
            security group.

          o tag :<key> - The key/value combination of a tag  assigned  to  the
            resource.  Use the tag key in the filter name and the tag value as
            the filter value. For example, to find all resources that  have  a
            tag with the key Owner and the value TeamA , specify tag:Owner for
            the filter name and TeamA for the filter value.

          o tag-key - The key of a tag assigned to the resource. Use this fil-
            ter  to  find  all  resources  assigned a tag with a specific key,
            regardless of the tag value.

          o vpc-id - The ID of the VPC specified when the security  group  was
            created.

          (structure)
              A  filter name and value pair that is used to return a more spe-
              cific list of results from a describe operation. Filters can  be
              used  to  match a set of resources by specific criteria, such as
              tags, attributes, or IDs.

              If you specify multiple filters, the filters are joined with  an
              AND , and the request returns only results that match all of the
              specified filters.

              Name -> (string)
                 The name of the filter. Filter names are case-sensitive.

              Values -> (list)
                 The filter values. Filter values are case-sensitive.  If  you
                 specify  multiple  values for a filter, the values are joined
                 with an OR , and the request returns all results  that  match
                 any of the specified values.

                 (string)

       Shorthand Syntax:

          Name=string,Values=string,string ...

       JSON Syntax:

          [
            {
              "Name": "string",
              "Values": ["string", ...]
            }
            ...
          ]

       --group-ids (list)
          The  IDs  of  the security groups. Required for security groups in a
          nondefault VPC.

          Default: Describes all of your security groups.

          (string)

       Syntax:

          "string" "string" ...

       --group-names (list)
          [EC2-Classic and default VPC only] The names of the security groups.
          You can specify either the security group name or the security group
          ID. For security groups in a nondefault VPC, use the group-name fil-
          ter to describe security groups by name.

          Default: Describes all of your security groups.

          (string)

       Syntax:

          "string" "string" ...

       --dry-run | --no-dry-run (boolean)
          Checks  whether  you  have  the required permissions for the action,
          without actually making the request, and provides an error response.
          If  you have the required permissions, the error response is DryRun-
          Operation . Otherwise, it is UnauthorizedOperation .

       --cli-input-json | --cli-input-yaml (string) Reads arguments  from  the
       JSON  string  provided.  The JSON string follows the format provided by
       --generate-cli-skeleton. If other arguments are provided on the command
       line,  those  values  will override the JSON-provided values. It is not
       possible to pass arbitrary binary values using a JSON-provided value as
       the  string  will  be  taken literally. This may not be specified along
       with --cli-input-yaml.

       --starting-token (string)
          A token to specify where to start paginating. This is the  NextToken
          from a previously truncated response.

          For usage examples, see Pagination in the AWS Command Line Interface
          User Guide .

       --page-size (integer)
          The size of each page to get in the AWS service call. This does  not
          affect the number of items returned in the command's output. Setting
          a smaller page size results  in  more  calls  to  the  AWS  service,
          retrieving  fewer  items in each call. This can help prevent the AWS
          service calls from timing out.

          For usage examples, see Pagination in the AWS Command Line Interface
          User Guide .

       --max-items (integer)
          The  total number of items to return in the command's output. If the
          total number of items available is more than the value specified,  a
          NextToken is provided in the command's output. To resume pagination,
          provide the NextToken value in the starting-token argument of a sub-
          sequent  command. Do not use the NextToken response element directly
          outside of the AWS CLI.

          For usage examples, see Pagination in the AWS Command Line Interface
          User Guide .

       --generate-cli-skeleton  (string)  Prints  a  JSON skeleton to standard
       output without sending an API request. If provided with no value or the
       value input, prints a sample input JSON that can be used as an argument
       for --cli-input-json. Similarly, if provided yaml-input it will print a
       sample  input  YAML that can be used with --cli-input-yaml. If provided
       with the value output, it validates the command inputs  and  returns  a
       sample output JSON for that command.

       See 'aws help' for descriptions of global parameters.

EXAMPLES
       Example 1: To describe a security group

       The  following describe-security-groups example describes the specified
       security group.

          aws ec2 describe-security-groups \
              --group-ids sg-903004f8

       Output:

          {
              "SecurityGroups": [
                  {
                      "IpPermissionsEgress": [
                          {
                              "IpProtocol": "-1",
                              "IpRanges": [
                                  {
                                      "CidrIp": "0.0.0.0/0"
                                  }
                              ],
                              "UserIdGroupPairs": [],
                              "PrefixListIds": []
                          }
                      ],
                      "Description": "My security group",
                      "Tags": [
                          {
                              "Value": "SG1",
                              "Key": "Name"
                          }
                      ],
                      "IpPermissions": [
                          {
                              "IpProtocol": "-1",
                              "IpRanges": [],
                              "UserIdGroupPairs": [
                                  {
                                      "UserId": "123456789012",
                                      "GroupId": "sg-903004f8"
                                  }
                              ],
                              "PrefixListIds": []
                          },
                          {
                              "PrefixListIds": [],
                              "FromPort": 22,
                              "IpRanges": [
                                  {
                                      "Description": "Access from NY office",
                                      "CidrIp": "203.0.113.0/24"
                                  }
                              ],
                              "ToPort": 22,
                              "IpProtocol": "tcp",
                              "UserIdGroupPairs": []
                              }
                      ],
                      "GroupName": "MySecurityGroup",
                      "VpcId": "vpc-1a2b3c4d",
                      "OwnerId": "123456789012",
                      "GroupId": "sg-903004f8",
                  }
              ]
          }

       Example 2: To describe security groups that have specific rules

       The following describe-security-groups``example uses filters  to  scope
       the results to security groups that have a rule that allows SSH traffic
       (port  22)  and  a  rule  that  allows  traffic  from   all   addresses
       (``0.0.0.0/0).  The  example uses the --query parameter to display only
       the names of the security groups. Security groups must match  all  fil-
       ters  to  be  returned  in the results; however, a single rule does not
       have to match all filters. For example, the output returns  a  security
       group  with  a  rule that allows SSH traffic from a specific IP address
       and another rule that allows HTTP traffic from all addresses.

          aws ec2 describe-security-groups \
              --filters Name=ip-permission.from-port,Values=22 Name=ip-permission.to-port,Values=22 Name=ip-permission.cidr,Values='0.0.0.0/0' \
              --query "SecurityGroups[*].[GroupName]" \
              --output text

       Output:

          default
          my-security-group
          web-servers
          launch-wizard-1

       Example 3: To describe security groups based on tags

       The following describe-security-groups example uses  filters  to  scope
       the  results to security groups that include test in the security group
       name, and that have  the  tag  Test=To-delete.  The  example  uses  the
       --query  parameter  to  display  only the names and IDs of the security
       groups.

          aws ec2 describe-security-groups \
              --filters Name=group-name,Values=*test* Name=tag:Test,Values=To-delete \
              --query "SecurityGroups[*].{Name:GroupName,ID:GroupId}"

       Output:

          [
              {
                  "Name": "testfornewinstance",
                  "ID": "sg-33bb22aa"
              },
              {
                  "Name": "newgrouptest",
                  "ID": "sg-1a2b3c4d"
              }
          ]

       For additional examples using tag filters, see Working with tags in the
       Amazon EC2 User Guide.

OUTPUT
       SecurityGroups -> (list)
          Information about the security groups.

          (structure)
              Describes a security group.

              Description -> (string)
                 A description of the security group.

              GroupName -> (string)
                 The name of the security group.

              IpPermissions -> (list)
                 The inbound rules associated with the security group.

                 (structure)
                     Describes a set of permissions for a security group rule.

                     FromPort -> (integer)
                        The start of port range for the TCP and UDP protocols,
                        or an ICMP/ICMPv6 type number. A value of -1 indicates
                        all ICMP/ICMPv6 types. If you specify all  ICMP/ICMPv6
                        types, you must specify all codes.

                     IpProtocol -> (string)
                        The  IP  protocol name (tcp , udp , icmp , icmpv6 ) or
                        number (see Protocol Numbers ).

                        [VPC only] Use  -1  to  specify  all  protocols.  When
                        authorizing  security  group rules, specifying -1 or a
                        protocol number other than tcp  ,  udp  ,  icmp  ,  or
                        icmpv6  allows traffic on all ports, regardless of any
                        port range you specify. For tcp , udp , and icmp , you
                        must specify a port range. For icmpv6 , the port range
                        is optional; if you omit the port range,  traffic  for
                        all types and codes is allowed.

                     IpRanges -> (list)
                        The IPv4 ranges.

                        (structure)
                            Describes an IPv4 range.

                            CidrIp -> (string)
                               The  IPv4  CIDR range. You can either specify a
                               CIDR range or  a  source  security  group,  not
                               both. To specify a single IPv4 address, use the
                               /32 prefix length.

                            Description -> (string)
                               A description for the security group rule  that
                               references this IPv4 address range.

                               Constraints:  Up  to  255 characters in length.
                               Allowed characters are a-z, A-Z,  0-9,  spaces,
                               and ._-:/()#,@[]+=&;{}!$*

                     Ipv6Ranges -> (list)
                        [VPC only] The IPv6 ranges.

                        (structure)
                            [EC2-VPC only] Describes an IPv6 range.

                            CidrIpv6 -> (string)
                               The  IPv6  CIDR range. You can either specify a
                               CIDR range or  a  source  security  group,  not
                               both. To specify a single IPv6 address, use the
                               /128 prefix length.

                            Description -> (string)
                               A description for the security group rule  that
                               references this IPv6 address range.

                               Constraints:  Up  to  255 characters in length.
                               Allowed characters are a-z, A-Z,  0-9,  spaces,
                               and ._-:/()#,@[]+=&;{}!$*

                     PrefixListIds -> (list)
                        [VPC only] The prefix list IDs.

                        (structure)
                            Describes a prefix list ID.

                            Description -> (string)
                               A  description for the security group rule that
                               references this prefix list ID.

                               Constraints: Up to 255  characters  in  length.
                               Allowed  characters  are a-z, A-Z, 0-9, spaces,
                               and ._-:/()#,@[]+=;{}!$*

                            PrefixListId -> (string)
                               The ID of the prefix.

                     ToPort -> (integer)
                        The end of port range for the TCP and  UDP  protocols,
                        or  an  ICMP/ICMPv6  code. A value of -1 indicates all
                        ICMP/ICMPv6 codes.  If  you  specify  all  ICMP/ICMPv6
                        types, you must specify all codes.

                     UserIdGroupPairs -> (list)
                        The  security group and Amazon Web Services account ID
                        pairs.

                        (structure)
                            Describes a security group and Amazon Web Services
                            account ID pair.

                            Description -> (string)
                               A  description for the security group rule that
                               references this user ID group pair.

                               Constraints: Up to 255  characters  in  length.
                               Allowed  characters  are a-z, A-Z, 0-9, spaces,
                               and ._-:/()#,@[]+=;{}!$*

                            GroupId -> (string)
                               The ID of the security group.

                            GroupName -> (string)
                               The name of the security group. In  a  request,
                               use  this  parameter  for  a  security group in
                               EC2-Classic or a default VPC only. For a  secu-
                               rity  group  in a nondefault VPC, use the secu-
                               rity group ID.

                               For a referenced security group in another VPC,
                               this  value  is  not returned if the referenced
                               security group is deleted.

                            PeeringStatus -> (string)
                               The status of  a  VPC  peering  connection,  if
                               applicable.

                            UserId -> (string)
                               The ID of an Amazon Web Services account.

                               For a referenced security group in another VPC,
                               the account ID of the referenced security group
                               is  returned in the response. If the referenced
                               security group is deleted, this  value  is  not
                               returned.

                               [EC2-Classic]  Required when adding or removing
                               rules  that  reference  a  security  group   in
                               another Amazon Web Services account.

                            VpcId -> (string)
                               The  ID  of the VPC for the referenced security
                               group, if applicable.

                            VpcPeeringConnectionId -> (string)
                               The ID of the VPC peering connection, if appli-
                               cable.

              OwnerId -> (string)
                 The  Amazon Web Services account ID of the owner of the secu-
                 rity group.

              GroupId -> (string)
                 The ID of the security group.

              IpPermissionsEgress -> (list)
                 [VPC only] The outbound rules associated  with  the  security
                 group.

                 (structure)
                     Describes a set of permissions for a security group rule.

                     FromPort -> (integer)
                        The start of port range for the TCP and UDP protocols,
                        or an ICMP/ICMPv6 type number. A value of -1 indicates
                        all ICMP/ICMPv6 types. If you specify all  ICMP/ICMPv6
                        types, you must specify all codes.

                     IpProtocol -> (string)
                        The  IP  protocol name (tcp , udp , icmp , icmpv6 ) or
                        number (see Protocol Numbers ).

                        [VPC only] Use  -1  to  specify  all  protocols.  When
                        authorizing  security  group rules, specifying -1 or a
                        protocol number other than tcp  ,  udp  ,  icmp  ,  or
                        icmpv6  allows traffic on all ports, regardless of any
                        port range you specify. For tcp , udp , and icmp , you
                        must specify a port range. For icmpv6 , the port range
                        is optional; if you omit the port range,  traffic  for
                        all types and codes is allowed.

                     IpRanges -> (list)
                        The IPv4 ranges.

                        (structure)
                            Describes an IPv4 range.

                            CidrIp -> (string)
                               The  IPv4  CIDR range. You can either specify a
                               CIDR range or  a  source  security  group,  not
                               both. To specify a single IPv4 address, use the
                               /32 prefix length.

                            Description -> (string)
                               A description for the security group rule  that
                               references this IPv4 address range.

                               Constraints:  Up  to  255 characters in length.
                               Allowed characters are a-z, A-Z,  0-9,  spaces,
                               and ._-:/()#,@[]+=&;{}!$*

                     Ipv6Ranges -> (list)
                        [VPC only] The IPv6 ranges.

                        (structure)
                            [EC2-VPC only] Describes an IPv6 range.

                            CidrIpv6 -> (string)
                               The  IPv6  CIDR range. You can either specify a
                               CIDR range or  a  source  security  group,  not
                               both. To specify a single IPv6 address, use the
                               /128 prefix length.

                            Description -> (string)
                               A description for the security group rule  that
                               references this IPv6 address range.

                               Constraints:  Up  to  255 characters in length.
                               Allowed characters are a-z, A-Z,  0-9,  spaces,
                               and ._-:/()#,@[]+=&;{}!$*

                     PrefixListIds -> (list)
                        [VPC only] The prefix list IDs.

                        (structure)
                            Describes a prefix list ID.

                            Description -> (string)
                               A  description for the security group rule that
                               references this prefix list ID.

                               Constraints: Up to 255  characters  in  length.
                               Allowed  characters  are a-z, A-Z, 0-9, spaces,
                               and ._-:/()#,@[]+=;{}!$*

                            PrefixListId -> (string)
                               The ID of the prefix.

                     ToPort -> (integer)
                        The end of port range for the TCP and  UDP  protocols,
                        or  an  ICMP/ICMPv6  code. A value of -1 indicates all
                        ICMP/ICMPv6 codes.  If  you  specify  all  ICMP/ICMPv6
                        types, you must specify all codes.

                     UserIdGroupPairs -> (list)
                        The  security group and Amazon Web Services account ID
                        pairs.

                        (structure)
                            Describes a security group and Amazon Web Services
                            account ID pair.

                            Description -> (string)
                               A  description for the security group rule that
                               references this user ID group pair.

                               Constraints: Up to 255  characters  in  length.
                               Allowed  characters  are a-z, A-Z, 0-9, spaces,
                               and ._-:/()#,@[]+=;{}!$*

                            GroupId -> (string)
                               The ID of the security group.

                            GroupName -> (string)
                               The name of the security group. In  a  request,
                               use  this  parameter  for  a  security group in
                               EC2-Classic or a default VPC only. For a  secu-
                               rity  group  in a nondefault VPC, use the secu-
                               rity group ID.

                               For a referenced security group in another VPC,
                               this  value  is  not returned if the referenced
                               security group is deleted.

                            PeeringStatus -> (string)
                               The status of  a  VPC  peering  connection,  if
                               applicable.

                            UserId -> (string)
                               The ID of an Amazon Web Services account.

                               For a referenced security group in another VPC,
                               the account ID of the referenced security group
                               is  returned in the response. If the referenced
                               security group is deleted, this  value  is  not
                               returned.

                               [EC2-Classic]  Required when adding or removing
                               rules  that  reference  a  security  group   in
                               another Amazon Web Services account.

                            VpcId -> (string)
                               The  ID  of the VPC for the referenced security
                               group, if applicable.

                            VpcPeeringConnectionId -> (string)
                               The ID of the VPC peering connection, if appli-
                               cable.

              Tags -> (list)
                 Any tags assigned to the security group.

                 (structure)
                     Describes a tag.

                     Key -> (string)
                        The key of the tag.

                        Constraints:  Tag keys are case-sensitive and accept a
                        maximum of 127 Unicode characters. May not begin  with
                        aws: .

                     Value -> (string)
                        The value of the tag.

                        Constraints:  Tag values are case-sensitive and accept
                        a maximum of 255 Unicode characters.

              VpcId -> (string)
                 [VPC only] The ID of the VPC for the security group.

       NextToken -> (string)
          The token to use to retrieve the next page of results. This value is
          null when there are no more results to return.



                                                    DESCRIBE-SECURITY-GROUPS()
